feat(ui): add a static ui in svelte for the server
Closes: #2

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ models/*.bin
 # Project Files
 /audio/*
 !/audio/sample_*
+
+# Svelte
+.output
+.vercel
+.netlify
+.wrangler
+**/.svelte-kit/
+**/build/
+**/node_modules/
+**/test-results/
